--- a/packages/mosaic-extension/manifest.json
+++ b/packages/mosaic-extension/manifest.json
@@ -1,10 +1,10 @@
 {
     "manifest_version": 3,
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
-    "version": "1.0",
+    "name": "Mosaic Extension",
+    "description": "Mosaic Chrome Extension",
+    "version": "0.01",
     "action": {
       "default_popup": "hello.html",
-      "default_icon": "hello_extensions.png"
+      "default_icon": "assets/mosaic.png"
     }
   }
