--- a/packages/mosaic-extension/manifest.json
+++ b/packages/mosaic-extension/manifest.json
@@ -4,7 +4,10 @@
     "description": "Mosaic Chrome Extension",
     "version": "0.01",
     "action": {
-      "default_popup": "hello.html",
-      "default_icon": "assets/mosaic.png"
-    }
+      "default_icon": "assets/mosaic.png",
+      "default_popup" : "hello.html"
+    },
+    "permissions" : [
+        "tabs"
+    ]
   }
